css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/*Fonts*/

:root {
  --text-font: Verdana, sans-serif;
}

/*Colors*/

:root {
  --white: rgb(229,229,229);
  --grey: rgb(69,69,69);
  --black: rgb(18,18,18);
  --blue: rgb(0,116,188);
  --yellow: rgb(255,203,5);
  --red: rgb(213,34,44);
}

body {
  background-color: rgb(38,38,38);
}

.background {
  background-color: var(--white);
}

.content {
  background-color: var(--white);
  margin: 0 auto;
  padding-bottom: 8px;
  width: 100vw;
  min-width: 320px;
  max-width: 800px;
  height: 100%;
  min-height: 100vh;
}

.logo {
  max-width: 90%;
  height: auto;
  margin: 5% 5% 16px;
}

.contact {
  display: flex;
  position: relative;
}

.contact:after {
  content: '';
  width: 90%;
  left: 5%;
  height: 2px;
  background: var(--blue);
  position: absolute;
  bottom: -10px;
}

.contact-item {
  display: flex;
  align-items: flex-start;
  margin: 0 0 0 5%;
  text-decoration: none;
}

.contact-item:hover .contact-icon {
  stroke: var(--black);
}

.contact-icon {
  flex-shrink: 0;
  width: 60px;
  min-width: 30px;
  max-width: 60px;
}

.contact-text {
  margin: auto 3%;
  font-family: var(--text-font);
  color: var(--grey);
  white-space: nowrap;
  font-size: 22px;
}

.contact-item:hover .contact-text {
  color: var(--black);
}

.profile-container {
  position: relative;
  display: flex;
  align-items: flex-start;
  margin: 24px 5% 16px 5%;
  padding-bottom: 16px;
  border-bottom: 2px solid var(--blue);
}

.profile-picture {
  width: 250px;
  object-fit: cover;
  box-shadow: 0px 0px 8px rgb(18,18,18);
  border-radius: 2px;
  flex-shrink: 0;
}

.profile-text {
  padding-left: 16px;
  font-family: var(--text-font);
}

.profile-text-header {
  padding: 0 4px;
  white-space: nowrap;
  border-radius: 2px;
  text-shadow: 1px 1px 8px rgba(229,229,229,0.8);
  width: max-content;
  font-size: 20.4px;
}

.profile-text-header-1 {
  margin: 0;
  background-color: var(--yellow);
}

.profile-text-header-2 {
  margin: 0;
  background-color: var(--yellow);
}

.profile-text-header-b {
  margin: 16px 0 8px 0;
  font-size: 16px;
}

.profile-text-header-b-sub {
  font-weight: bold;
  text-decoration: underline;
  text-decoration-color: var(--red);
  padding-bottom: 4px;
}

.profile-text-points {
  font-style: italic;
  padding-bottom: 4px;
  font-size: 14px;
}

.profile-text p {
  margin: 0;
}

.references-container {
  position: relative;
  padding: 0 5%;
}

.references-container:after {
  content: '';
  width: 90%;
  left: 5%;
  height: 2px;
  background: var(--blue);
  position: absolute;
  bottom: -2px;
}

.references-header {
  width: max-content;
  font-family: var(--text-font);
  margin: 0;
  padding: 0 4px;
  background-color: var(--yellow);
  border-radius: 2px;
  text-shadow: 1px 1px 8px rgba(229,229,229,0.8);
  font-size: 17.7px;
}

.references {
  display: grid;
  grid-template-columns: 50% 50%;
}

.references-images-slideshow {
  box-shadow: 0px 0px 8px rgba(18,18,18,.5);
  height: 260px;
  position: relative;
}

.references-image {
  border-radius: 2px;
  width: 100%;
  height: 100%;
  max-height: 100%; /*fix for safari*/
  object-fit: cover;
}

.references-images-slideshow-text-container {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  bottom: 0;
  display: grid;
  grid-template-rows: 80% auto;
  text-align: center;
  cursor: pointer;
}

.references-images-slideshow-text {
  margin: 0;
  padding-top: 4%;
  font-family: var(--text-font);
  font-weight: bold;
  text-shadow: 1px 1px 4px rgb(229,229,229);
  border-radius: 2px 0;
  font-size: 20px;
}

/*repetitive image css*/

/*slideshow 1*/
.references-images-1 {
  margin: 16px 8px 8px 0;
}
/*slideshow 2*/
.references-images-2 {
  margin: 16px 0 8px 8px;
}
/*slideshow 3*/
.references-images-3 {
  margin: 8px 8px 8px 0;
}
/*slideshow 4*/
.references-images-4 {
  margin: 8px 0 8px 8px;
}
/*slideshow 5*/
.references-images-5 {
  margin: 8px 8px 16px 0;
}
/*slideshow 6*/
.references-images-6 {
  margin: 8px 0 16px 8px;
}

/*Slickshow*/

.hidden-z-index {
  z-index: -1 !important;
}

.slick-container {
  position: fixed;
  left: 0;
  top: 0;
  width: 96vw;
  height: 96vh;
  padding: 2vh 2vw;
  background-color: rgba(18,18,18,0.9);
  z-index: 2;
}
/* ... */

